EX-611 Autologin after updating password

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -148,6 +148,7 @@ login.notFound=Wrong password or login!
 login.password=Password
 login.submit=Submit
 login.title=Please, login
+login.passwordUpdateSuccess=Password has been successfully updated.
 mechants.commission=Stock exchange commission
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=Yandex Money
