--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -150,6 +150,7 @@ login.password=\u041F\u0430\u0440\u043E\u043B\u044C
 login.submit=\u0412\u043E\u0439\u0442\u0438
 login.title=\u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0432\u043E\u0439\u0434\u0438\u0442\u0435
 mechants.commission=\u041A\u043E\u043C\u0438\u0441\u0441\u0438\u044F \u0411\u0438\u0440\u0436\u0438
+login.passwordUpdateSuccess=\u041F\u0430\u0440\u043E\u043B\u044C \u0431\u044B\u043B \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D.
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=\u042F\u043D\u0434\u0435\u043A\u0441 \u0414\u0435\u043D\u044C\u0433\u0438
 merchants.amountToBeCredited=\u0418\u0442\u043E\u0433\u043E \u0441\u0443\u043C\u043C\u0430 \u043A \u0437\u0430\u0447\u0438\u0441\u043B\u0435\u043D\u0438\u044E
