--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1570,3 +1570,4 @@ merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
 merchants.withdrawNotification.DECLINED_ERROR=Your withdraw request #{0} is declined with error
 message.additional.address.warning.VNT=If the destination memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 sabrWallet.title=SABR wallet
+message.additional.address.warning.TERN=If the memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
