--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1529,3 +1529,4 @@ message.comission.fixed=Fixed
 sabrWallet.title=SABR wallet
 
 merchants.withdrawNotification.DECLINED_ERROR=Your withdraw request #{0} is declined with error
+message.additional.address.warning.TERN=If the memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
