--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1289,7 +1289,7 @@ merchants.addAll=Add all
 message.ref.DELETED=Canceled
 message.ref.PAYED=Payed
 message.ripple.tagError=Field {0} must contains only digits and have value from 0 to 4294967295
-message.stellar.tagError=Field {0} must contains only digits and have value from 0 to 9007199254740991
+message.stellar.tagError_old=Field {0} must contains only digits and have value from 0 to 9007199254740991
 message.nem.tagError=Field {0} must be shorter than 512 bytes
 message.comission.dynamic=Counted dynamicaly
 merchants.refill.XEM=Payment Address: {0}   <br>\
@@ -1571,3 +1571,4 @@ merchants.withdrawNotification.DECLINED_ERROR=Your withdraw request #{0} is decl
 message.additional.address.warning.VNT=If the destination memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 sabrWallet.title=SABR wallet
 message.additional.address.warning.TERN=If the memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
+message.stellar.tagError=Field {0} must be not more than 40 symbols
