EX-703 | Full tasks (add locale, add block editing in admin without access, add some style)
(cherry picked from commit 84a3dcb)

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1667,6 +1667,7 @@ message.pincode.for2faChange=Exrates. Pin code for 2fa change is {0}
 message.subj.2fachange.pin=Pin code for change settings, Exrates
 response.change2fa.pin.email=Pin code for change settings has been sent to your email {0}
 
+userOperation.title=Individual blocking of functions
 userOperation.INPUT=Input
 userOperation.OUTPUT=Output
 userOperation.TRANSFER=Transfer
