Some fix locale

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -143,10 +143,10 @@ emailsubmitResetPassword.subject=Confirmation exrates.me password recovery
 emailsubmitResetPassword.text=You requested exrates.me password recovery. To confirm click here
 emailsubmitregister.subject=Registration confirmation on exrates.me
 emailsubmitregister.text=You have registered on exrates.me. To confirm registration, please click here
-login.blocked=Account is blocked! Check your email - perhaps you haven't confirmed your previous action
+login.blocked=Account is blocked! Check your email - perhaps you haven't confirmed your previous action. In any other case contact our support.
 login.email=Email
 login.errorLogin=Login error!
-login.notFound=Wrong password or login!
+login.notFound=Wrong email or password!
 login.password=Password
 login.submit=Submit
 login.title=Please, login
