Add locale (need check RU and AR)

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -198,8 +198,19 @@ validation.passwordrequired=输入秘密!
 orderinfo.deletedcount = 反向记录（基于事务）：
 transaction.notProvided =  等待 
 withdrawal.requestDatetime = 创建日
-dashboard.SELL = 卖出 
-login.title = 请登录 
+dashboard.SELL = 卖出
+login.heading=登錄
+login.2fa.title=請輸入雙因素驗證碼
+login.2fa.placeholder=驗證碼
+login.button=授权
+login.blocked = 帐号堵住了！
+login.email = Email
+login.errorLogin = 登录失败！
+login.notFound = 错误的密码或用户名！
+login.password = 密码
+login.submit = 进入
+login.title = 请登录
+login.passwordUpdateSuccess=密码已成功更新
 merchants.withdrawRequestAccepted = 业已
 merchants.withdrawRequestAccept = 证明
 admin.passwordnotproved = 链接确认密码是无效的（过期）。
@@ -249,7 +260,6 @@ dashboard.loginText = 注册
 merchants.withdrawNotification.header = 资金的提款申请的通知Exrates
 merchants.withdraw = 打印
 register.unsuccessfullyproved = 到报名确认的链接是无效的（过期）。
-login.errorLogin = 登录失败！
 admin.changeFinPassword = 更改密码金融
 register.capchaincorrect = 同时检查验证码时发生错误。重复，请再次
 merchants.modalOutputWallet = 输入钱袋的数目：
@@ -278,7 +288,6 @@ orders.exrate = 牌价
 merchants.close = 关
 dashboard.forBeginners = 为了开始的
 merchants.WithdrawRequestError = 发生错误，请通知管理员。
-login.submit = 进入
 ordersearch.dateplaceholder = 年-月-日  HH：MM：SS
 order.rate = 单位牌价
 withdrawal.user = 使用者
@@ -299,7 +308,7 @@ orderinfo.convertamount = 总额
 admin.upload = 装入
 order.total = 一共(总共) 
 chart.wait = 装料...
-login.blocked = 帐号堵住了！
+
 ordersearch.errordate = 形式 :  年-月-日 HH：MM：SS
 merchants.withdrawRequestDecline = 推让
 admin.transactions = 交易
@@ -341,7 +350,7 @@ admin.internalError = 发生了错误。请稍后再试。
 merchants.withdrawNotificationDeclined = 您的{1}系统撤军＃{0}的请求被驳回。
 dashboard.buyOrders = 用于购买认股权证：
 chart.hours1 = 小时
-login.email = Email
+
 chart.month = 月
 dberror.title = 错误!
 emailsubmitnewip.subject = 新IP地址
@@ -355,7 +364,7 @@ merchants.WithdrawRequestAccept = 该应用程序已成功接受
 merchants.outputTitle = 提款
 admin.ref = 链接
 admin.listOfAdmins = 管理员列表
-login.notFound = 错误的密码或用户名！
+
 order.valuerange=该值应在范围：{0} - {1}
 wallets.amount = 支付的数量
 merchants.WithdrawRequestDecline = 申明推出了
@@ -417,7 +426,6 @@ dashboard.personalArea = 私人办公室
 emailsubmitChangePassword.subject = 更改密码确认exrates.me=请注意您的金额。它必须完全匹配上面列出的金额
 admin.finpasswordnotproved = 链接到财务密码确认无效（过期）。
 admin.title = 管理
-login.password = 密码 
 dashboard.calculate = 考虑:
 dashboard.total = 共计：
 admin.companyWallet = 帐户组织
