--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -141,14 +141,19 @@ emailsubmitResetPassword.subject=Konfirmasi pemulihan kata sandi exrates.me
 emailsubmitResetPassword.text=Anda telah mengajukan permohonan untuk pemulihan kata sandi exrates.me. Untuk mengkonfirmasi klik disini
 emailsubmitregister.subject=Konfirmasi Pendaftaran exrates.me
 emailsubmitregister.text=Anda mendaftar melalui exrates.me.Untuk mengkonfirmasi pendaftaran, silahkan klik di sini
+login.heading=Masuk
+login.2fa.title=Silakan masukkan kode otentikasi dua faktor
+login.2fa.placeholder=Kode otentikasi
+login.button=Otorisasi saya
 login.blocked=Akun diblokir!\
-1)Periksa e-mail Anda - mungkin Anda belum mengkonfirmasi tindakan sebelumnya .
+1)Periksa e-mail Anda - mungkin Anda belum mengkonfirmasi tindakan sebelumnya.\
 2)Dengan tidak adanya pesan pada email Anda, hubungi dukungan teknis. Mungkin, profil Anda telah diblokir oleh administrator.
 login.errorLogin=Login gagal!
 login.notFound=Kata sandi atau nama pengguna salah!
 login.password=Kata sandi
 login.submit=Masuk
 login.title=Silahkan login
+login.passwordUpdateSuccess=Password berhasil di update.
 mechants.commission=Komisi bursa saham
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=Uang Yandex
