EX-609 | Add locale

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -300,6 +300,8 @@ admin.upload = 装入
 order.total = 一共(总共) 
 chart.wait = 装料...
 login.blocked = 帐号堵住了！
+login.passwordUpdateSuccess=密码已成功更新
+login.notExists.email=此電子郵件不存在
 ordersearch.errordate = 形式 :  年-月-日 HH：MM：SS
 merchants.withdrawRequestDecline = 推让
 admin.transactions = 交易
