--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -151,6 +151,7 @@ login.password=Password
 login.submit=Submit
 login.title=Please, login
 login.passwordUpdateSuccess=Password has been successfully updated.
+login.notExists.email=This email doesn't exist
 mechants.commission=Stock exchange commission
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=Yandex Money
