--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -149,6 +149,8 @@ login.notFound=Kata sandi atau nama pengguna salah!
 login.password=Kata sandi
 login.submit=Masuk
 login.title=Silahkan login
+login.passwordUpdateSuccess=Password berhasil di update
+login.notExists.email=Email ini tidak ada
 mechants.commission=Komisi bursa saham
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=Uang Yandex
