--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -151,6 +151,8 @@ login.notFound= \u0643\u0644\u0645\u0629 \u0645\u0631\u0648\u0631 \u062E\u0627\u
 login.password=\u0643\u0644\u0645\u0629 \u0627\u0644\u0633\u0631
 login.submit=\u0627\u062F\u062E\u0644
 login.title=\u0627\u062F\u062E\u0644, \u0645\u0646 \u0641\u0636\u0644\u0643
+login.passwordUpdateSuccess=\u062a\u0645 \u062a\u062d\u062f\u064a\u062b \u0643\u0644\u0645\u0629 \u0627\u0644\u0645\u0631\u0648\u0631 \u0628\u0646\u062c\u0627\u062d
+login.notExists.email=\u0647\u0630\u0647 \u0627\u0644\u0631\u0633\u0627\u0644\u0629 \u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f\u0629
 mechants.commission=\u0644\u062C\u0646\u0629 \u0627\u0644\u0628\u0648\u0631\u0635\u0629
 mechants.perfectmoney=\u0627\u0644\u0645\u0627\u0644 \u0627\u0644\u0645\u0646\u0627\u0633\u0628
 mechants.yandexmoney=\u0645\u0627\u0644 \u0627\u0644\u064A\u0627\u0646\u062F\u064A\u0643\u0633
@@ -1615,7 +1617,7 @@ merchant.modalInputFinalSum=
 merchants.withdrawNotification.DECLINED_ERROR=Your withdraw request #{0} is declined with error
 message.additional.address.warning.TERN=If the memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 message.stellar.tagError=Field {0} must be not more than 26 symbols
-        
+
 error.message.http.status=HTTP status:
 error.404NotFound.message.title=Page not found
 error.404NotFound.message=Pages with the specified address does not exist
