EX-595 | Add locale

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -300,6 +300,10 @@ admin.upload = 装入
 order.total = 一共(总共) 
 chart.wait = 装料...
 login.blocked = 帐号堵住了！
+register.emailExists=電郵存在
+register.emailWrong=邮箱有误
+register.emailIsRequired=邮箱必填
+register.emailValidation=除了句点（。），加号（+），下划线（_）和短划线（ - ）之外电子邮件不能包含其他特殊字符
 ordersearch.errordate = 形式 :  年-月-日 HH：MM：SS
 merchants.withdrawRequestDecline = 推让
 admin.transactions = 交易
