--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -151,6 +151,10 @@ login.password=Password
 login.submit=Submit
 login.title=Please, login
 login.passwordUpdateSuccess=Password has been successfully updated.
+register.emailExists=Email exists
+register.emailWrong=Wrong email
+register.emailIsRequired=Email is required
+register.emailValidation=Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)
 mechants.commission=Stock exchange commission
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=Yandex Money
