--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -149,6 +149,10 @@ login.notFound=Kata sandi atau nama pengguna salah!
 login.password=Kata sandi
 login.submit=Masuk
 login.title=Silahkan login
+register.emailExists=Email ada
+register.emailWrong=Email salah
+register.emailIsRequired=Email harus diisi
+register.emailValidation=Email tidak boleh berisi karakter khusus kecuali titik (.), Plus (+), garis bawah (_) dan tanda hubung (-)
 mechants.commission=Komisi bursa saham
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=Uang Yandex
