--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -156,6 +156,8 @@ register.emailExists=Email exists
 register.emailWrong=Wrong email
 register.emailIsRequired=Email is required
 register.emailValidation=Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)
+createRecovery.password=Password
+createRecovery.passwordIsRequires=Password is required
 mechants.commission=Stock exchange commission
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=Yandex Money
