--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1386,6 +1386,10 @@ response.withdraw.pin.telegram=Pin code for withdraw has been sent to your Teleg
 response.transfer.pin.telegram=Pin code for transfer has been sent to your Telegram
 response.login.pin.sms=Pin code for login has been sent to your phone{0}
 response.login.pin.telegram=Pin code for login has been sent to your Telegram
+response.transfer.code.google2fa=Use the Google Authenticator app to receive codes for transfer
+response.withdraw.code.google2fa=Use the Google Authenticator app to receive codes for withdraw
+response.login.code.google2fa=Use the Google Authenticator app to receive codes for login
+message.google2fa.barcode=Scan this Barcode using Google Authenticator app on your phone to use it later in login
 message.telegram.reconnectInstr=To connect another account send code to the telegram bot {0}\
   {1}
 message.sms.forOneMessage=Price for one message
