--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -151,12 +151,12 @@ login.notFound= \u0643\u0644\u0645\u0629 \u0645\u0631\u0648\u0631 \u062E\u0627\u
 login.password=\u0643\u0644\u0645\u0629 \u0627\u0644\u0633\u0631
 login.submit=\u0627\u062F\u062E\u0644
 login.title=\u0627\u062F\u062E\u0644, \u0645\u0646 \u0641\u0636\u0644\u0643
-login.passwordUpdateSuccess=\u062a\u0645 \u062a\u062d\u062f\u064a\u062b \u0643\u0644\u0645\u0629 \u0627\u0644\u0645\u0631\u0648\u0631 \u0628\u0646\u062c\u0627\u062d
-login.notExists.email=\u0647\u0630\u0647 \u0627\u0644\u0631\u0633\u0627\u0644\u0629 \u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f\u0629
-register.emailExists=\u064a\u0648\u062c\u062f \u0628\u0631\u064a\u062f \u0627\u0644\u0643\u062a\u0631\u0648\u0646\u064a
-register.emailWrong=\u0628\u0631\u064a\u062f \u0625\u0644\u0643\u062a\u0631\u0648\u0646\u064a \u062e\u0627\u0637\u0626
-register.emailIsRequired=\u0627\u0644\u0628\u0631\u064a\u062f \u0627\u0644\u0627\u0644\u0643\u062a\u0631\u0648\u0646\u064a \u0645\u0637\u0644\u0648\u0628
-register.emailValidation=\u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u064a\u062d\u062a\u0648\u064a \u0627\u0644\u0628\u0631\u064a\u062f \u0627\u0644\u0625\u0644\u0643\u062a\u0631\u0648\u0646\u064a \u0639\u0644\u0649 \u0623\u062d\u0631\u0641 \u062e\u0627\u0635\u0629 \u0628\u0627\u0633\u062a\u062b\u0646\u0627\u0621 \u0627\u0644\u0646\u0642\u0637\u0629 \u0028\u002e\u0029 \u060c \u0628\u0627\u0644\u0625\u0636\u0627\u0641\u0629 \u0625\u0644\u0649 \u0028\u002b\u0029 \u060c \u0648\u0634\u0631\u0637\u0629 \u0633\u0641\u0644\u064a\u0629 \u0028\u005f\u0029 \u0648\u0634\u0631\u0637\u0629 \u0028\u002d\u0029
+login.passwordUpdateSuccess=\u062A\u0645 \u062A\u062D\u062F\u064A\u062B \u0643\u0644\u0645\u0629 \u0627\u0644\u0645\u0631\u0648\u0631 \u0628\u0646\u062C\u0627\u062D
+login.notExists.email=\u0647\u0630\u0647 \u0627\u0644\u0631\u0633\u0627\u0644\u0629 \u063A\u064A\u0631 \u0645\u0648\u062C\u0648\u062F\u0629
+register.emailExists=\u064A\u0648\u062C\u062F \u0628\u0631\u064A\u062F \u0627\u0644\u0643\u062A\u0631\u0648\u0646\u064A
+register.emailWrong=\u0628\u0631\u064A\u062F \u0625\u0644\u0643\u062A\u0631\u0648\u0646\u064A \u062E\u0627\u0637\u0626
+register.emailIsRequired=\u0627\u0644\u0628\u0631\u064A\u062F \u0627\u0644\u0627\u0644\u0643\u062A\u0631\u0648\u0646\u064A \u0645\u0637\u0644\u0648\u0628
+register.emailValidation=\u0644\u0627 \u064A\u0645\u0643\u0646 \u0623\u0646 \u064A\u062D\u062A\u0648\u064A \u0627\u0644\u0628\u0631\u064A\u062F \u0627\u0644\u0625\u0644\u0643\u062A\u0631\u0648\u0646\u064A \u0639\u0644\u0649 \u0623\u062D\u0631\u0641 \u062E\u0627\u0635\u0629 \u0628\u0627\u0633\u062A\u062B\u0646\u0627\u0621 \u0627\u0644\u0646\u0642\u0637\u0629 (.) \u060C \u0628\u0627\u0644\u0625\u0636\u0627\u0641\u0629 \u0625\u0644\u0649 (+) \u060C \u0648\u0634\u0631\u0637\u0629 \u0633\u0641\u0644\u064A\u0629 (_) \u0648\u0634\u0631\u0637\u0629 (-)
 mechants.commission=\u0644\u062C\u0646\u0629 \u0627\u0644\u0628\u0648\u0631\u0635\u0629
 mechants.perfectmoney=\u0627\u0644\u0645\u0627\u0644 \u0627\u0644\u0645\u0646\u0627\u0633\u0628
 mechants.yandexmoney=\u0645\u0627\u0644 \u0627\u0644\u064A\u0627\u0646\u062F\u064A\u0643\u0633
@@ -1429,6 +1429,10 @@ response.withdraw.pin.telegram=Pin code for withdraw has been sent to your Teleg
 response.transfer.pin.telegram=Pin code for transfer has been sent to your Telegram
 response.login.pin.sms=Pin code for login has been sent to your phone{0}
 response.login.pin.telegram=Pin code for login has been sent to your Telegram
+response.transfer.code.google2fa=Use the Google Authenticator app to receive codes for transfer
+response.withdraw.code.google2fa=Use the Google Authenticator app to receive codes for withdraw
+response.login.code.google2fa=Use the Google Authenticator app to receive codes for login
+message.google2fa.barcode=Scan this Barcode using Google Authenticator app on your phone to use it later in login
 message.telegram.reconnectInstr=To connect another account send code to the telegram bot {0} \
   {1}
 message.sms.forOneMessage=Price for one message
