EX-600 | Add locale

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -302,10 +302,13 @@ chart.wait = 装料...
 login.blocked = 帐号堵住了！
 login.passwordUpdateSuccess=密码已成功更新
 login.notExists.email=此電子郵件不存在
+login.button.backToLogin=返回登录页面
 register.emailExists=電郵存在
 register.emailWrong=邮箱有误
 register.emailIsRequired=邮箱必填
 register.emailValidation=除了句点（。），加号（+），下划线（_）和短划线（ - ）之外电子邮件不能包含其他特殊字符
+register.unconfirmedUser=未經證實的用戶
+register.button.sendAgain=重新發送
 ordersearch.errordate = 形式 :  年-月-日 HH：MM：SS
 merchants.withdrawRequestDecline = 推让
 admin.transactions = 交易
