--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -151,10 +151,13 @@ login.submit=Masuk
 login.title=Silahkan login
 login.passwordUpdateSuccess=Password berhasil di update
 login.notExists.email=Email ini tidak ada
+login.button.backToLogin=Kembali ke login
 register.emailExists=Email ada
 register.emailWrong=Email salah
 register.emailIsRequired=Email harus diisi
 register.emailValidation=Email tidak boleh berisi karakter khusus kecuali titik (.), Plus (+), garis bawah (_) dan tanda hubung (-)
+register.unconfirmedUser=Pengguna yang tidak dikonfirmasi
+register.button.sendAgain=Kirim lagi
 mechants.commission=Komisi bursa saham
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=Uang Yandex
