EX-600 | Add locale

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -157,6 +157,7 @@ register.emailWrong=Email salah
 register.emailIsRequired=Email harus diisi
 register.emailValidation=Email tidak boleh berisi karakter khusus kecuali titik (.), Plus (+), garis bawah (_) dan tanda hubung (-)
 register.unconfirmedUser=Pengguna yang tidak dikonfirmasi
+register.unconfirmedUserMessage=Sepertinya Anda tidak menyelesaikan pendaftaran, email itu dikirimkan kepada Anda pada {0}, periksa surat dan ikuti petunjuknya
 register.button.sendAgain=Kirim lagi
 mechants.commission=Komisi bursa saham
 mechants.perfectmoney=Perfect Money
