--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -308,6 +308,7 @@ register.emailWrong=邮箱有误
 register.emailIsRequired=邮箱必填
 register.emailValidation=除了句点（。），加号（+），下划线（_）和短划线（ - ）之外电子邮件不能包含其他特殊字符
 register.unconfirmedUser=未經證實的用戶
+register.unconfirmedUserMessage=看起來您沒有完成註冊，電子郵件已在{0}發送給您，檢查郵件並按照說明操作
 register.button.sendAgain=重新發送
 ordersearch.errordate = 形式 :  年-月-日 HH：MM：SS
 merchants.withdrawRequestDecline = 推让
