ico pairs filter for history

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1609,3 +1609,4 @@ btcWallet.checkPayment.modal.body=Please enter hash of the block from where to s
 btcWallet.checkPayment.title=Check payments
 sabrWallet.title=SABR wallet
 order_ico.no_orders_for_rate=No ico order with current price
+message.cp.ICO=ICO markets
