--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1528,3 +1528,4 @@ message.comission.fixed=Fixed
 merchants.withdraw.ON_BCH_EXAM=ON_BCH_EXAM
 sabrWallet.title=SABR wallet
 order_ico.no_orders_for_rate=No ico order with current price
+message.cp.ICO=ICO markets
