--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1220,6 +1220,7 @@ message.cp.USD=USD markets
 message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
 message.cp.ETH=ETH markets
+message.cp.ICO=ICO markets
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
 dogeWallet.title=Dogecoin Wallet
