--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1569,3 +1569,4 @@ merchants.withdrawNotification.IN_POSTING=Your withdrawal request #{0} is on pos
 merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
 sabrWallet.title=SABR wallet
 order_ico.no_orders_for_rate=No ico order with current price
+message.cp.ICO=ICO markets
