EX-309 | Optional nickname

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -388,7 +388,10 @@ dashboard.lowestPrice = 最低报价
 dashboard.entrance = 进口
 dashboard.tradeAPI = 交易API
 deleteorder.submit = 删除
-admin.changePasswordSendEmail = 你的邮件将发送确认操作，检查电子邮件，并按照指示
+admin.changePasswordSendEmail=你的邮件将发送确认操作，检查电子邮件，并按照指示
+admin.changeNickname=改变昵称
+admin.changePasswordTitle=更换密码
+admin.changeNicknameTitle=改变昵称
 dashboard.tools = 工具
 dashboard.hello = 美好的一天！
 ordersearch.date = 创造日期
@@ -495,7 +498,6 @@ news.addnews = 添加新闻
 dashboard.onlinechat = 在线聊天
 refferal.generate = 生成
 order.alreadyacceptederror = 订单已承兑
-admin.changePasswordTitle = 更换密码
 operationtype.INPUT = 收入
 dashboard.transactions = 我的交易
 transactionsourcetype.MERCHANT = 投入／输出
