--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -22,7 +22,10 @@ admin.admins=Administrators
 admin.cancel=Cancel
 admin.changeFinPassword=Change financial password
 admin.changePassword=Change main password
+admin.changeNickname=Change nickname
 admin.changePasswordSendEmail=To confirm the operation, check your e-mail and follow the instructions in received message
+admin.changePasswordTitle=Changing the passwords
+admin.changeNicknameTitle=Changing the nickname
 admin.companyWallet=Company account
 admin.confirmpassword=Confirm password
 admin.editUser=Edit user
@@ -584,7 +587,6 @@ mystatement.datetime=Date
 orderinfo.info=Data about the order
 orderinfo.currencypair=Currency Pair
 orderinfo.ok=Ok
-admin.changePasswordTitle=Changing the passwords
 currency.search=Search
 session.expire=The session has expired. You need to log in again.
 inputoutput.datetime=Date
