--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -9,7 +9,10 @@ admin.admins=Bagian administrasi
 admin.cancel=Membatalkan
 admin.changeFinPassword=Mengganti kata sandi finansial
 admin.changePassword=Mengganti kata sandi utama
+admin.changeNickname=Mengganti kata nickname
 admin.changePasswordSendEmail=Anda akan menerima email yang berisi tentang konfirmasi operasi,periksa e mail anda dan ikuti petunjuk
+admin.changePasswordTitle=Pengantian kata sandi
+admin.changeNicknameTitle=Mengubah nickname
 admin.companyWallet=Dompet perusahaan
 admin.confirmpassword=Ulangi kata sandi
 admin.editUser=Perbarui pengguna
@@ -636,7 +639,6 @@ mystatement.datetime=Tanggal transaksi
 orderinfo.info=Informasi order
 orderinfo.currencypair=Pasangan mata uang
 orderinfo.ok=Ok
-admin.changePasswordTitle=Pengantian kata sandi
 login.email=Email
 currency.search=Pencarian
 session.expire=Sesi berakhir. Anda harus login lagi.
