fix partners page

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1,4 +1,4 @@
-acceptorder.submit=接受
+﻿acceptorder.submit=接受
 acceptorder.text=你把一个单据这类数据
 acceptorder.title=接受单据
 acceptordersuccess.link=链接
@@ -1488,7 +1488,11 @@ To submit a request, please provide the following technical information on your 
 <br/>\
 <p>We will inform you on exact price only after studying all the technical documentation and the approval of the management.</p>\
 <br/>\
-<p>If you are interested, please mail to {0} with all required technical data.</p>
+<p>If you are interested, please mail to {0}, {3} with all required technical data.</p>\
+<p>{0} The head of the sales team.</p>\
+<p>{1} Sales manager.</p>\
+<p>{2} Sales manager.</p>\
+<p>{3} Client Service Department.</p>
 btcWallet.feeRate=Fee rate, {0}/kB
 btcWallet.raw.payments=Payments:
 btcWallet.totalFee=Total fee amount;
