--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1740,3 +1740,4 @@ user.settings.changePassword.successful=Kata sandi telah berhasil diperbarui.
 user.settings.changePassword.fail=Sandi lama salah. Kata Sandi TIDAK berubah.
 user.settings.changeNickname.successful=
 user.settings.changeNickname.fail=
+admin.user.transactions.aplly_dates=Apply dates
