--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1700,3 +1700,4 @@ user.settings.changePassword.successful=密碼已成功更新。
 user.settings.changePassword.fail=舊密碼錯了。 密碼未更改。
 user.settings.changeNickname.successful=
 user.settings.changeNickname.fail=
+our.partners=Our partners
