--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1783,3 +1783,4 @@ user.settings.changePassword.successful=\u041F\u0430\u0440\u043E\u043B\u044C \u0
 user.settings.changePassword.fail=\u0421\u0442\u0430\u0440\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C \u043D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439. \u041F\u0430\u0440\u043E\u043B\u044C \u043D\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D.
 user.settings.changeNickname.successful=
 user.settings.changeNickname.fail=
+our.partners=\u041D\u0430\u0448\u0438 \u043F\u0430\u0440\u0442\u043D\u0435\u0440\u044B
