--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1778,3 +1778,4 @@ user.settings.changePassword.successful=\u0645 \u062A\u062D\u062F\u064A\u062B \u
 user.settings.changePassword.fail=\u0643\u0644\u0645\u0629 \u0627\u0644\u0645\u0631\u0648\u0631 \u0627\u0644\u0642\u062F\u064A\u0645\u0629 \u062E\u0627\u0637\u0626\u0629. \u0643\u0644\u0645\u0629 \u0627\u0644\u0645\u0631\u0648\u0631 \u0644\u0645 \u062A\u062A\u063A\u064A\u0631.
 user.settings.changeNickname.successful=
 user.settings.changeNickname.fail=
+our.partners=Our partners
