--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1641,3 +1641,4 @@ user.settings.changePassword.successful=Password has been successfully updated.
 user.settings.changePassword.fail=Old password wrong. Password NOT changed.
 user.settings.changeNickname.successful=
 user.settings.changeNickname.fail=
+our.partners=Our partners
