--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1,4 +1,4 @@
-acceptorder.submit=\u63A5\u53D7
+﻿acceptorder.submit=\u63A5\u53D7
 acceptorder.text=\u4F60\u628A\u4E00\u4E2A\u5355\u636E\u8FD9\u7C7B\u6570\u636E
 acceptorder.title=\u63A5\u53D7\u5355\u636E
 acceptordersuccess.link=\u94FE\u63A5
@@ -1702,3 +1702,18 @@ user.settings.changeNickname.successful=
 user.settings.changeNickname.fail=
 admin.user.transactions.aplly_dates=Apply dates
 our.partners=Our partners
+
+contacts.title=CONTACTS & REPRESENTATIVES
+contacts.intro=Dear community please visit our representative offices and get detailed information about the listing and partnership with Exrates.
+contacts.findUs=You can find us:
+contacts.officeLocation.title=Representative office location:
+contacts.officeLocation.china=北京市朝阳区朝阳路都会国际  China, Beijing, Chaoyang dstr, Chaoyang rd, Duhui international
+contacts.officeLocation.switzerland=Gotthardstrasse 191, Goeschenen, CH-6487, Switzerland (MERKURI HOLDING AG)
+contacts.partners.title=Managing Partner
+contacts.partners=房金柱 mr.Fang
+contacts.chairman.title=Chairman of the Board
+contacts.chairman=Vladislav Postoupalski
+contacts.support.title=Listing Support Line
+
+country.china=China
+country.switzerland=Switzerland
