--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1785,3 +1785,18 @@ user.settings.changeNickname.successful=
 user.settings.changeNickname.fail=
 admin.user.transactions.aplly_dates=\u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u0434\u0430\u0442\u044B
 our.partners=\u041D\u0430\u0448\u0438 \u043F\u0430\u0440\u0442\u043D\u0435\u0440\u044B
+
+contacts.title=CONTACTS & REPRESENTATIVES
+contacts.intro=Dear community please visit our representative offices and get detailed information about the listing and partnership with Exrates.
+contacts.findUs=You can find us:
+contacts.officeLocation.title=Representative office location:
+contacts.officeLocation.china=北京市朝阳区朝阳路都会国际  China, Beijing, Chaoyang dstr, Chaoyang rd, Duhui international
+contacts.officeLocation.switzerland=Gotthardstrasse 191, Goeschenen, CH-6487, Switzerland (MERKURI HOLDING AG)
+contacts.partners.title=Managing Partner
+contacts.partners=房金柱 mr.Fang
+contacts.chairman.title=Chairman of the Board
+contacts.chairman=Vladislav Postoupalski
+contacts.support.title=Listing Support Line
+
+country.china=China
+country.switzerland=Switzerland
