--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1643,3 +1643,4 @@ user.settings.changeNickname.successful=
 user.settings.changeNickname.fail=
 admin.user.transactions.aplly_dates=Apply dates
 our.partners=Our partners
+admin.adk.wallet=ADK wallet
