--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1742,3 +1742,4 @@ user.settings.changeNickname.successful=
 user.settings.changeNickname.fail=
 admin.user.transactions.aplly_dates=Apply dates
 our.partners=Our partners
+admin.adk.wallet=ADK wallet
