--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1426,6 +1426,7 @@ admin.users.new=New users registered
 ip.ban.message=Your IP address is banned for {0}. Please try to login again later
 ip.ban.time.minutes = {0} minutes
 ip.ban.time.hours = {0} hours
+ip.ban.message.incorrectAttemptsExceeded=IP banned: number of incorrect attempts exceeded!
 message.alertUpdate=Update of exchange will performed in __time . Exchange will unavailable for {0} minutes
 admin.transferCommissions=Transfer comissions
 admin.merchantsCommissions.transfer=Comission for transfer
