--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1367,6 +1367,7 @@ admin.users.new=New users registered
 ip.ban.message=Your IP address is banned for {0}. Please try to login again later
 ip.ban.time.minutes = {0} minutes
 ip.ban.time.hours = {0} hours
+ip.ban.message.incorrectAttemptsExceeded=IP banned: number of incorrect attempts exceeded!
 message.alertUpdate=Attention! EXRATES will not be available for {0} minutes due to updating! We apologize for the inconvenience!
 message.alertTechWorks=EXRATES is under maintenance! Occasional interruptions in work are possible! We apologize for the inconvenience!
 admin.transferCommissions=Transfer comissions
