transactions table refactor

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1780,4 +1780,4 @@ user.settings.changeNickname.successful=
 user.settings.changeNickname.fail=
 admin.user.transactions.aplly_dates=Apply dates
 our.partners=Our partners
-admin.adk.wallet=ADK wallet
+admin.adk.wallet=ADK - AidosKuneen wallet
