--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1785,4 +1785,4 @@ user.settings.changeNickname.successful=
 user.settings.changeNickname.fail=
 admin.user.transactions.aplly_dates=\u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u0434\u0430\u0442\u044B
 our.partners=\u041D\u0430\u0448\u0438 \u043F\u0430\u0440\u0442\u043D\u0435\u0440\u044B
-admin.adk.wallet=ADK wallet
+admin.adk.wallet=ADK - AidosKuneen \u043A\u043E\u0448\u0435\u043B\u0435\u043A
