--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1798,3 +1798,6 @@ contacts.support.title=Listing Support Line
 
 country.china=China
 country.switzerland=Switzerland
+message.pincode.for2faChange=Exrates. Pin code for 2fa change is {0}
+response.change2fa.pin.email=Pin code for change settings has been sent to your email {0}
+message.subj.2fachange.pin=Pin code for change settings, Exrates
