--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1661,3 +1661,7 @@ contacts.support.title=Listing Support Line
 
 country.china=China
 country.switzerland=Switzerland
+
+message.pincode.for2faChange=Exrates. Pin code for 2fa change is {0}
+message.subj.2fachange.pin=Pin code for change settings, Exrates
+response.change2fa.pin.email=Pin code for change settings has been sent to your email {0}
