--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1724,7 +1724,7 @@ message.pincode.for2faChange=Exrates. Pin code for 2fa change is {0}
 response.change2fa.pin.email=Pin code for change settings has been sent to your email {0}
 message.subj.2fachange.pin=Pin code for change settings, Exrates
 
-userOperation.title=Individual blocking of functions
+userOperation.title=Access to user operations
 userOperation.INPUT=Input
 userOperation.OUTPUT=Output
 userOperation.TRANSFER=Transfer
