--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1807,7 +1807,7 @@ message.pincode.for2faChange=Exrates. \u041F\u0438\u043D-\u043A\u043E\u0434 \u04
 response.change2fa.pin.email=\u041F\u0438\u043D-\u043A\u043E\u0434 \u0434\u043B\u044F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u043D\u0430\u0441\u0442\u0440\u043E\u0435\u043A \u0431\u044B\u043B \u043E\u0442\u043F\u0440\u0430\u0432\u043B\u0435\u043D \u043D\u0430 \u0432\u0430\u0448 email {0}
 message.subj.2fachange.pin=Pin code for change settings, Exrates
 
-userOperation.title=\u0418\u043d\u0434\u0438\u0432\u0438\u0434\u0443\u0430\u043b\u044c\u043d\u0430\u044f \u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u043a\u0430 \u0444\u0443\u043d\u043a\u0446\u0438\u0439
+userOperation.title=\u0414\u043e\u0441\u0442\u0443\u043f \u043a \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u043c \u043e\u043f\u0435\u0440\u0430\u0446\u0438\u044f\u043c
 userOperation.INPUT=\u0412\u0432\u043e\u0434
 userOperation.OUTPUT=\u0412\u044b\u0432\u043e\u0434
 userOperation.TRANSFER=\u041f\u0435\u0440\u0435\u0432\u043e\u0434
