--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1720,7 +1720,11 @@ contacts.support.title=Listing Support Line
 
 country.china=China
 country.switzerland=Switzerland
-merchants.withdraw.ON_BCH_EXAM=On bch exam
 message.pincode.for2faChange=Exrates. Pin code for 2fa change is {0}
 response.change2fa.pin.email=Pin code for change settings has been sent to your email {0}
 message.subj.2fachange.pin=Pin code for change settings, Exrates
+
+userOperation.INPUT=Input
+userOperation.OUTPUT=Output
+userOperation.TRANSFER=Transfer
+userOperation.TRADING=Trading
