--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1642,6 +1642,7 @@ sabrWallet.title=SABR wallet
 message.additional.address.warning.VNT=If the destination memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 merchant.modalInputFinalSum=
 merchants.withdrawNotification.DECLINED_ERROR=Your withdraw request #{0} is declined with error
+
 message.additional.address.warning.TERN=If the memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 message.stellar.tagError=Field {0} must be not more than 26 symbols
 
@@ -1802,3 +1803,8 @@ country.switzerland=Switzerland
 message.pincode.for2faChange=Exrates. Pin code for 2fa change is {0}
 response.change2fa.pin.email=Pin code for change settings has been sent to your email {0}
 message.subj.2fachange.pin=Pin code for change settings, Exrates
+
+userOperation.INPUT=Input
+userOperation.OUTPUT=Output
+userOperation.TRANSFER=Transfer
+userOperation.TRADING=Trading
