--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1497,7 +1497,6 @@ message.comission.fixed=Fixed
 sabrWallet.title=SABR wallet
 
 order_ico.no_orders_for_rate=No ico order with current price
-merchants.withdraw.ON_BCH_EXAM=On bch exam
 
 message.additional.address.warning.VNT=If the destination memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 merchants.withdrawNotification.DECLINED_ERROR=Your withdraw request #{0} is declined with error
@@ -1667,3 +1666,8 @@ country.switzerland=Switzerland
 message.pincode.for2faChange=Exrates. Pin code for 2fa change is {0}
 message.subj.2fachange.pin=Pin code for change settings, Exrates
 response.change2fa.pin.email=Pin code for change settings has been sent to your email {0}
+
+userOperation.INPUT=Input
+userOperation.OUTPUT=Output
+userOperation.TRANSFER=Transfer
+userOperation.TRADING=Trading
