--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1760,7 +1760,11 @@ contacts.support.title=Listing Support Line
 
 country.china=China
 country.switzerland=Switzerland
-merchants.withdraw.ON_BCH_EXAM=On bch exam
 message.pincode.for2faChange=Exrates. Pin code for 2fa change is {0}
 response.change2fa.pin.email=Pin code for change settings has been sent to your email {0}
 message.subj.2fachange.pin=\u041F\u0438\u043D \u043A\u043E\u0434 \u0434\u043B\u044F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u043D\u0430\u0441\u0442\u0440\u043E\u0435\u043A, Exrates
+
+userOperation.INPUT=Input
+userOperation.OUTPUT=Output
+userOperation.TRANSFER=Transfer
+userOperation.TRADING=Trading
