--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1290,6 +1290,7 @@ message.subj.transfer.pin=Pin code for transfer funds, Exrates
 message.pincode.forWithdraw=Exrates. Pin for withdraw {0}. Amount {1}
 message.pincode.forTransfer=Exrates. Pin for transfer {0}. Amount {1}
 notificator.conect=Connect
+notificator.disconnect=Disconnect
 notificator.reconnect=Reconnect
 message.telegram.connectInstr=To subscribe to alerts via Telegrams, click the 'Pay and get Code' button,\
 and send the code to the bot {0} {1}.\
@@ -1307,7 +1308,8 @@ response.login.pin.telegram=Pin code for login has been sent to your Telegram
 response.transfer.code.google2fa=Use the Google Authenticator app to receive codes for transfer
 response.withdraw.code.google2fa=Use the Google Authenticator app to receive codes for withdraw
 response.login.code.google2fa=Use the Google Authenticator app to receive codes for login
-message.google2fa.barcode=Scan this Barcode using Google Authenticator app on your phone to use it later in login
+message.google2fa.barcode=Scan this QR-code using Google Authenticator app on your phone to use it later
+message.google2fa.code=if you are unable to scan the QR-code, please enter this code manually into the app {0}
 message.telegram.reconnectInstr=To connect another account send code to the telegram bot {0} \
   {1}
 message.sms.forOneMessage=Price for one message
@@ -1665,3 +1667,15 @@ country.switzerland=Switzerland
 message.pincode.for2faChange=Exrates. Pin code for 2fa change is {0}
 message.subj.2fachange.pin=Pin code for change settings, Exrates
 response.change2fa.pin.email=Pin code for change settings has been sent to your email {0}
+
+ga.2fa_disable_title=Two Factor Authentication Disabled
+ga.2fa_enable_title=Two Factor Authentication Enabled
+ga.2fa_recommend=For extra account security, we strongly recommend you enable two-factor authentication (2FA).
+ga.2fa_turnoff=If you want to turn off 2FA, input your account password and the 16-digit code provided by the Google Authenticator app below, then click 
+ga.2fa_backed_up=I have backed up my 16-digit key.
+ga.2fa_note=NOTE: This code changes each time you enable 2FA. If you disable 2FA this code will no longer be valid.
+ga.2fa_16=16-Digit-Key:
+ga.2fa_save=save a backup of your recovery key
+ga.2fa_enable_button=Enable 2FA
+ga.2fa_disable_button=Disable 2FA
+ga.2fa_turnon=<b>Before turning on 2FA, write down or <span style="text-decoration: underline; margin-bottom: 24px; color:grey;">save a backup of your 16-digit key</span> and put it in safe place.</b> If your phone gets lost, stolen, or erased, you will need this key to get back into you account!
