--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1439,9 +1439,11 @@ response.transfer.code.google2fa=\u0412\u043E\u0441\u043F\u043E\u043B\u044C\u043
 response.withdraw.code.google2fa=\u0412\u043E\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0439\u0442\u0435\u0441\u044C \u0441\u0433\u0435\u043D\u0435\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u044B\u043C \u043A\u043E\u0434\u043E\u043C Google Authenticator \u0434\u043B\u044F \u0432\u044B\u0432\u043E\u0434\u0430
 response.login.code.google2fa=\u0412\u043E\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0439\u0442\u0435\u0441\u044C \u0441\u0433\u0435\u043D\u0435\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u044B\u043C \u043A\u043E\u0434\u043E\u043C Google Authenticator \u0434\u043B\u044F \u0432\u0445\u043E\u0434\u0430
 message.google2fa.barcode=\u041E\u0442\u0441\u043A\u0430\u043D\u0438\u0440\u0443\u0439\u0442\u0435 QR-\u043A\u043E\u0434 \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u044F \u043F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u0438\u044F Google Authenticator \u043D\u0430 \u0432\u0430\u0448\u0435\u043C \u0443\u0441\u0442\u0440\u043E\u0439\u0441\u0442\u0432\u0435
+message.google2fa.code=\u0435\u0441\u043B\u0438 \u0432\u044B \u043D\u0435 \u043C\u043E\u0436\u0435\u0442\u0435 \u043E\u0442\u0441\u043A\u0430\u043D\u0438\u0440\u043E\u0432\u0430\u0442\u044C QR-\u043A\u043E\u0434, \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430 \u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u044D\u0442\u043E\u0442 \u043A\u043E\u0434 \u0432\u0440\u0443\u0447\u043D\u0443\u044E {0}
 message.pincode.forWithdraw=Exrates. \u041F\u0438\u043D-\u043A\u043E\u0434 \u0434\u043B\u044F \u0432\u044B\u0432\u043E\u0434\u0430 {0}. \u0421\u0443\u043C\u043C\u0430 {1}
 message.pincode.forTransfer=Exrates. \u041F\u0438\u043D-\u043A\u043E\u0434 \u0434\u043B\u044F \u043F\u0435\u0440\u0435\u0432\u043E\u0434\u0430 {0}. \u0421\u0443\u043C\u043C\u0430 {1}
 notificator.conect=\u041F\u0440\u0438\u0441\u043E\u0435\u0434\u0438\u043D\u0438\u0442\u044C
+notificator.disconnect=\u041E\u0442\u0441\u043E\u0435\u0434\u0438\u043D\u0438\u0442\u044C
 notificator.reconnect=\u041F\u0435\u0440\u0435\u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u044C
 message.telegram.connectInstr=\u0414\u043B\u044F \u043F\u043E\u0434\u043F\u0438\u0441\u043A\u0438 \u043D\u0430 \u043E\u043F\u043E\u0432\u0435\u0449\u0435\u043D\u0438\u044F \u0447\u0435\u0440\u0435\u0437 \u0422\u0435\u043B\u0435\u0433\u0440\u0430\u043C \u043D\u0430\u0436\u043C\u0438\u0442\u0435 \u043A\u043D\u043E\u043F\u043A\u0443 '\u041E\u043F\u043B\u0430\u0442\u0438\u0442\u044C \u0438 \u043F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u043A\u043E\u0434', \
 \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u043D\u044B\u0439 \u043A\u043E\u0434 \u043E\u0442\u043F\u0440\u0430\u0432\u044C\u0442\u0435 \u0431\u043E\u0442\u0443 {0} {1}. \
@@ -1806,3 +1808,15 @@ country.switzerland=Switzerland
 message.pincode.for2faChange=Exrates. \u041F\u0438\u043D-\u043A\u043E\u0434 \u0434\u043B\u044F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u043D\u0430\u0441\u0442\u0440\u043E\u0435\u043A 2fa {0}
 response.change2fa.pin.email=\u041F\u0438\u043D-\u043A\u043E\u0434 \u0434\u043B\u044F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u043D\u0430\u0441\u0442\u0440\u043E\u0435\u043A \u0431\u044B\u043B \u043E\u0442\u043F\u0440\u0430\u0432\u043B\u0435\u043D \u043D\u0430 \u0432\u0430\u0448 email {0}
 message.subj.2fachange.pin=Pin code for change settings, Exrates
+
+ga.2fa_disable_title=Two Factor Authentication Disabled
+ga.2fa_enable_title=Two Factor Authentication Enabled
+ga.2fa_recommend=For extra account security, we strongly recommend you enable two-factor authentication (2FA).
+ga.2fa_turnoff=If you want to turn off 2FA, input your account password and the 16-digit code provided by the Google Authenticator app below, then click 
+ga.2fa_backed_up=I have backed up my 16-digit key.
+ga.2fa_note=NOTE: This code changes each time you enable 2FA. If you disable 2FA this code will no longer be valid.
+ga.2fa_16=16-Digit-Key:
+ga.2fa_save=save a backup of your recovery key
+ga.2fa_enable_button=Enable 2FA
+ga.2fa_disable_button=Disable 2FA
+ga.2fa_turnon=<b>Before turning on 2FA, write down or <span style="text-decoration: underline; margin-bottom: 24px; color:grey;">save a backup of your 16-digit key</span> and put it in safe place.</b> If your phone gets lost, stolen, or erased, you will need this key to get back into you account!
