--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1679,3 +1679,4 @@ ga.2fa_save=save a backup of your recovery key
 ga.2fa_enable_button=Enable 2FA
 ga.2fa_disable_button=Disable 2FA
 ga.2fa_turnon=<b>Before turning on 2FA, write down or <span style="text-decoration: underline; margin-bottom: 24px; color:grey;">save a backup of your 16-digit key</span> and put it in safe place.</b> If your phone gets lost, stolen, or erased, you will need this key to get back into you account!
+ga.2fa.invalid_credentials=Invalid credentials
