--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -872,6 +872,7 @@ merchants.withdrawDetails.recipientBank=Recipient's bank
 merchants.withdrawDetails.recipientAccount=Recipient's account number
 merchants.withdrawDetails.recipientFullName=Recipient's full name
 withdraw.infoModal.title=Withdraw request summary
+withdraw.address.warning_availability=You are trying to make a withdrawal to the Exrates address! To transfer funds to another Exrates' user, please use the transfer, voucher or free voucher function.
 transactionsourcetype.INVOICE=INVOICE
 news.clearform.prompt=Clear content?
 merchants.invoice.error.fieldsNotField=Mandatory fields not filled!
