--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -955,6 +955,7 @@ merchants.withdrawDetails.recipientBank=Bank penerima
 merchants.withdrawDetails.recipientAccount=Nomor rekening penerima
 merchants.withdrawDetails.recipientFullName=Nama lengkap penerima
 withdraw.infoModal.title=Menarik ringkasan permintaan
+withdraw.address.warning_availability=You are trying to make a withdrawal to the Exrates address! To transfer funds to another Exrates' user, please use the transfer, voucher or free voucher function
 transactionsourcetype.INVOICE=INVOICE
 news.clearform.prompt=Clear content?
 merchants.invoice.error.fieldsNotField=Bidang wajib tidak diisi!
